Table User {
  id int [pk, increment]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password varchar [not null]
  first_name varchar
  last_name varchar
  created_at timestamp
  updated_at timestamp
}

Table UserProfile {
  id int [pk, increment]
  user_id int [ref: > User.id, unique, not null]
  profile_picture varchar
  bio text
  phone varchar
  address varchar
  created_at timestamp
  updated_at timestamp
}

Table Airline {
  id int [pk, increment]
  name varchar [not null]
  iata_code varchar [unique, not null]
  created_at timestamp
  updated_at timestamp
}

Table Flight {
  id int [pk, increment]
  airline_id int [ref: > Airline.id, not null]
  flight_number varchar [not null]
  departure_airport varchar [not null]
  arrival_airport varchar [not null]
  departure_time timestamp [not null]
  arrival_time timestamp [not null]
  created_at timestamp
  updated_at timestamp
}

Table Hotel {
  id int [pk, increment]
  name varchar [not null]
  address varchar [not null]
  city varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table RoomType {
  id int [pk, increment]
  hotel_id int [ref: > Hotel.id, not null]
  name varchar [not null]
  description text
  price decimal [not null]
  created_at timestamp
  updated_at timestamp
}

Table Amenity {
  id int [pk, increment]
  name varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table HotelAmenity {
  id int [pk, increment]
  hotel_id int [ref: > Hotel.id, not null]
  amenity_id int [ref: > Amenity.id, not null]
}

Table RentalCar {
  id int [pk, increment]
  car_type varchar [not null]
  make varchar [not null]
  model varchar [not null]
  year int [not null]
  price_per_day decimal [not null]
  created_at timestamp
  updated_at timestamp
}

Table Booking {
  id int [pk, increment]
  user_id int [ref: > UserProfile.id, not null]
  flight_id int [ref: > Flight.id]
  hotel_id int [ref: > Hotel.id]
  rental_car_id int [ref: > RentalCar.id]
  booking_date date [not null]
  total_price decimal [not null]
  created_at timestamp
  updated_at timestamp
}

Table Review {
  id int [pk, increment]
  booking_id int [ref: > Booking.id, not null]
  rating int [not null]
  comment text
  created_at timestamp
  updated_at timestamp
}